sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
	
var swap : Boolean = true
val debut = 0 
var fin = getNombreValeurs()-2

 
 while ( swap == true ) {
 	swap = false
	for (i <- debut to fin ) {
		
		if ( plusPetit(i , i+1) == false ) {
			echange (i , i+1 ) 
			swap = true
			fin = fin-1
		}
		
	}
	for (i <- fin to debut by -1) {
		
		if ( plusPetit(i , i+1) == false ) {
			echange (i , i+1 ) 
			swap = true
			debut = debut +1
		}
		
	}
}

}
